--- a/Módulo3/HTML e CSS/exercicios/ex018/index.html
+++ b/Módulo3/HTML e CSS/exercicios/ex018/index.html
@@ -14,6 +14,16 @@
             border: 2px solid black;
             border-radius: 20px;
         }
+
+        div#q1{
+            background-color: skyblue;
+        }
+        div#q2{
+            background-image: linear-gradient(to bottom, yellow, orange);
+        }
+        div#q3{
+            background-image: url(imagens-cap19/pattern003.png);
+        }
     </style>
 </head>
 <body>
