--- a/Módulo3/HTML e CSS/exercicios/ex018/fundo1.html
+++ b/Módulo3/HTML e CSS/exercicios/ex018/fundo1.html
@@ -7,6 +7,7 @@
     <style>
         body{
             background-image: url(https://github.com/gustavoguanabara/html-css/blob/master/imagens/mascote.png?raw=true);
+            background-repeat: no-repeat;
         }
     </style>
 </head>
