--- a/Módulo3/HTML e CSS/exercicios/ex018/fundo1.html
+++ b/Módulo3/HTML e CSS/exercicios/ex018/fundo1.html
@@ -5,13 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fundo 1</title>
     <style>
-        body{
-            background-image: url(https://github.com/gustavoguanabara/html-css/blob/master/imagens/mascote.png?raw=true);
-            background-repeat: no-repeat;
+        div.imgfundo#f1{
+            background-image: url(https://github.com/gustavoguanabara/html-css/blob/master/imagens/mascote.png?raw=true); /*quando a imagem for pequena, elas vai se repetir até caber em todo background = background-repeat:repeat(padrão)*/
+            display: inline-block;
+            border: 10px solid black;
+            width: 700px;
+            height: 700px;
+            background-size: 100px;
+        }
+        div.imgfundo#f2{
+            background-image: url(https://github.com/gustavoguanabara/html-css/blob/master/imagens/mascote.png?raw=true); /*quando a imagem for pequena, elas vai se repetir até caber em todo background = background-repeat:repeat(padrão)*/
+            background-repeat: no-repeat; /*faz com que as imagns não se repitam*/
+            display: inline-block;
+            border: 10px solid black;
+            width: 700px;
+            height: 700px;
+            background-size: 100px;
+        }
+        div.imgfundo#f3{
+            background-image: url(https://github.com/gustavoguanabara/html-css/blob/master/imagens/mascote.png?raw=true); /*quando a imagem for pequena, elas vai se repetir até caber em todo background = background-repeat:repeat(padrão)*/
+            display: inline-block;
+            background-repeat:repeat-x;/*repete em linha(horizontal)*/
+            border: 10px solid black;
+            width: 700px;
+            height: 700px;
+            background-size: 100px;
+        }
+        div.imgfundo#f4{
+            background-image: url(https://github.com/gustavoguanabara/html-css/blob/master/imagens/mascote.png?raw=true); /*quando a imagem for pequena, elas vai se repetir até caber em todo background = background-repeat:repeat(padrão)*/
+            display: inline-block;
+            background-repeat:repeat-y;/*repete em coluna(vertical)*/
+            border: 10px solid black;
+            width: 700px;
+            height: 700px;
+            background-size: 100px;
         }
     </style>
 </head>
 <body>
+    <div class="imgfundo" id="f1"></div>
     
+    <div class="imgfundo" id="f2"></div>
+    <div class="imgfundo" id="f3"></div>
+    <div class="imgfundo" id="f4"></div>
 </body>
 </html>
