--- a/Módulo3/HTML e CSS/exercicios/ex018/index.html
+++ b/Módulo3/HTML e CSS/exercicios/ex018/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens de fundo</title>
     <style>
+        body{
+            background-image: url(imagens-cap19/wallpaper001.jpg);
+        }
+
         div.quadrado{
             display: inline-block;
             width: 300px;
