--- a/Módulo3/HTML e CSS/desafios/d11.html
+++ b/Módulo3/HTML e CSS/desafios/d11.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio 11</title>
+    <style>
+        #espaco{
+            height: 99vh;
+            background-color: black;
+            background-image: url(imagens/espaco.jpg);
+            background-position: center center;
+            background-size: 100% 100%;
+            background-attachment:fixed;
+        }
+
+        #astronauta{
+            position: absolute;
+            background-image: url(imagens/astronauta.png);
+            background-size: 100%;
+            width: 1200px;
+            height: 1200px;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+
+        }
+    </style>
 </head>
 <body>
-    
+    <main id="espaco">
+
+        <article id="astronauta">
+            
+        </article>
+    </main>
 </body>
 </html>
