--- a/Módulo3/HTML e CSS/desafios/desafio13/d13-03.html
+++ b/Módulo3/HTML e CSS/desafios/desafio13/d13-03.html
@@ -10,6 +10,15 @@
         width: 400px;
     }
 
+    caption{
+        text-align: left;
+        font-weight: bolder;
+        font-size: 1.5em;
+        border: 1px solid black;
+        border-bottom: none;
+        padding: 5px;
+    }
+
     th,td{
         border: 1px solid black;
         padding: 5px;
@@ -33,6 +42,7 @@
 </head>
 <body>
     <table>
+        <caption>Aluno: </caption>
         <thead>
             <tr class="cabecalho"> <!--linha 1-->
                 <th scope="col" rowspan="2">Área</th>
@@ -50,26 +60,26 @@
                 <th scope="rowgroup" rowspan="4">Exatas</th>
                 <td class="materia">Matemática</td>
                 <td>0.0</td>
-                <td></td>
-                <td></td>
+                <td>--</td>
+                <td>0.0</td>
             </tr>
             <tr><!--linha 4-->
                 <td class="materia">Física</td>
-                <td></td>
-                <td></td>
+                <td>--</td>
+                <td>--</td>
                 <td>0.0</td>
             </tr>
             <tr><!--linha 5-->
                 <td class="materia">Química</td>
-                <td></td>
+                <td>--</td>
                 <td>0.0</td>
-                <td></td>
+                <td>0.0</td>
             </tr>
             <tr><!--linha 6-->
                 <td class="materia">Biologia</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>--</td>
+                <td>--</td>
+                <td>0.0</td>
             </tr>
             <tr class="cabecalho"><!--linha 7-->
                 <th scope="row" colspan="4"  class="media">Média de Exatas</th>
@@ -78,15 +88,15 @@
             <tr><!--linha 8-->
                 <th scope="rowgroup" rowspan="2">Humanas</th>
                 <td class="materia">História</td>
-                <td></td>
+                <td>--</td>
                 <td>0.0</td>
-                <td></td>
+                <td>0.0</td>
             </tr>
             <tr><!--linha 9-->
                 <td class="materia">Geografia</td>
                 <td>0.0</td>
-                <td></td>
-                <td></td>
+                <td>--</td>
+                <td>0.0</td>
             </tr>
             <tr class="cabecalho"><!--linha 10-->
                 <th scope="row" colspan="4"class="media">Média de Humanas</th>
