--- a/Módulo 4/HTML e CSS/Exercicios/ex20/iframe02.html
+++ b/Módulo 4/HTML e CSS/Exercicios/ex20/iframe02.html
@@ -26,6 +26,6 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatum tempore inventore vitae voluptate sunt rerum necessitatibus aut, odio a fugiat sequi possimus, dolore tempora. Aspernatur cum officia molestias quam.</p>
 
-    <iframe src="pg01.html" frameborder="0"></iframe>
+    <iframe src="paginas extras/pg01.html" frameborder="0"></iframe>
 </body>
 </html>
