--- a/Módulo 4/HTML e CSS/Exercicios/ex21/form01.html
+++ b/Módulo 4/HTML e CSS/Exercicios/ex21/form01.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php" autocomplete="off"> <!--Esse action é um script para outra linguagem de programação que vai ser acionada quando o 'submit' desse formulário for clicado.-->
+    <form action="cadastro.php" method="post" autocomplete="off"> <!--Esse action é um script para outra linguagem de programação que vai ser acionada quando o 'submit' desse formulário for clicado.-->
        <p><label for="inome">Nome:</label> 
             <input type="text" name="nome" id="inome"></p> 
        <p><label for="isobrenome">Sobrenome:</label> 
