--- a/Módulo 4/HTML e CSS/Exercicios/ex21/form10.html
+++ b/Módulo 4/HTML e CSS/Exercicios/ex21/form10.html
@@ -16,7 +16,7 @@
 
             <p>
                 <label for="iidade">Sua idade é: </label>
-                <output id="iidade"></output>
+                <output id="iidade">0</output>
             </p>
 
         <p>
@@ -26,7 +26,7 @@
     </form>
     <script>
         function calcIdade() {
-            let atual = new Date().getFullYear
+            let atual =  new Date().getFullYear()
             iidade.innerHTML = Number(atual) - Number(iano.value)
         }
     </script>
